--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install --prefix ./clonenames-client",
     "start": "node app.js",
-    "build": "cd clonenames-client && ng build --prod",
+    "heroku-postbuild": "cd clonenames-client && ng build --prod",
     "dev": "nodemon app.js"
   },
   "author": "Wil Coiner",
